# max_cpg

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
NeurythmicApp/: PosPeriod.gendsp  ZeroxTrig.gendsp  grooveDriver.gendsp  init.txt  neurythmic.maxpat  nth.gendsp  readme.txt  sampler.maxpat
docs/: cpg.hello-world.maxref.xml  cpg.network.maxref.xml  cpg.network~.maxref.xml  cpg.node_basic.maxref.xml  cpg.node_basic~.maxref.xml  cpg.node_freq.maxref.xml  cpg.node_freq~.maxref.xml
help/: cpg.basic.tilde.maxhelp  cpg.basic~.maxhelp  cpg.freq_tilde.maxhelp  cpg.freq~.maxhelp  (+4 more)
source/MatsuokaEngine_src/: CMakeLists.txt  CPG.cpp  CPG.h  Matsu_calcs.cpp  Matsu_calcs.h  MatsuokaEngine.cpp  MatsuokaEngine.h  MatsuokaEngine_src.vcxproj  MatsuokaEngine_src.vcxproj.filters  QuantiseGrid_hard.cpp  QuantiseGrid_hard.h  QuantiseGrid_soft.cpp  QuantiseGrid_soft.h  QuantisedEventQueue.cpp  QuantisedEventQueue.h  ReadMe.txt  ScalingCurve.cpp  ScalingCurve.h  XORRand.cpp  XORRand.h  core.cpp  core.h  delayLine.h  mainpage.dox  matsuNode.cpp  matsuNode.h  matsu_signal_calcs.c  matsu_signal_calcs.h
source/MatsuokaEngine_src/x64/Debug/: MatsuokaEngine_src.idb
source/MatsuokaEngine_src/x64/Debug/Matsuoka.DA160A1A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MatsuokaEngine_src.lastbuildstate
source/MatsuokaEngine_src/x64/Release/Matsuoka.DA160A1A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  MatsuokaEngine_src.lastbuildstate  lib.command.1.tlog
source/projects/cpg.node_basic_tilde/: CMakeLists.txt  cpg.node_basic_tilde.cpp  cpg.node_basic_tilde_test.cpp
(+30 files in other folders)
